# cfsuite-migrate

./: .gitignore  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/resolved/: wrong-namespace-prefix.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md
.planning/phases/02-core-etl/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  deferred-items.md
.planning/phases/03-validation-and-polish/: 03-01-PLAN.md  03-01-SUMMARY.md  deferred-items.md
.planning/phases/04-web-ui/: 04-01-PLAN.md  04-01-SUMMARY.md  04-RESEARCH.md  04-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/todos/pending/: 2026-03-12-fix-cfsuite1-namespace-in-all-migrators.md
migrate/: auth.py  etl.py  main.py  models.py  pipeline.py  prompts.py  sf_api.py  web.py
migrate/objects/: community_request.py  entitlement.py  preferred_comms.py  request_flow.py
migrate/static/: index.html
tests/: test_auth.py  test_community_request.py  test_entitlement.py  test_etl.py  test_pipeline.py  test_preferred_comms.py  test_progress.py  test_prompts.py  test_request_flow.py  test_sf_api.py  test_web.py
